--- a/ServiceNow_Dialogs.yml
+++ b/ServiceNow_Dialogs.yml
@@ -1,5 +1,5 @@
 ---
-- description: Create Servicenow Incident to be the Dialog
+- description: Create Servicenow Incident
   buttons: submit,cancel
   label: Create Context Specific Snow Incident
   system: false
@@ -20,7 +20,7 @@
       dialog_fields:
       - name: create_generic_snow_incident_ci_type
         description: ''
-        data_type: string
+        data_type: 
         notes: 
         notes_display: 
         display: edit
@@ -29,18 +29,16 @@
         required: false
         required_method: 
         required_method_options: {}
-        default_value: ''
+        default_value: 
         values_method: 
         values_method_options: {}
         options:
-          sort_by: description
-          sort_order: ascending
-          force_multi_value: false
-          show_past_days: false
           protected: false
+          show_past_days: false
+          force_multi_value: false
         label: Configuration Item Type
         position: 0
-        validator_type: 
+        validator_type: f
         validator_rule: 
         reconfigurable: false
         dynamic: true
@@ -51,7 +49,7 @@
         trigger_auto_refresh: false
         visible: true
         validator_message: 
-        type: DialogFieldDropDownList
+        type: DialogFieldTextBox
         resource_action:
           action: 
           resource_type: DialogField
@@ -61,10 +59,9 @@
           ae_message: 
           ae_attributes: {}
         dialog_field_responders: []
-        values: 
       - name: create_generic_snow_incident_ci_name
         description: ''
-        data_type: 
+        data_type: string
         notes: 
         notes_display: 
         display: edit
@@ -132,7 +129,7 @@
           force_multi_value: false
           show_past_days: false
           protected: false
-        label: Name
+        label: Urgency
         position: 2
         validator_type: 
         validator_rule: 
